Make --force-enable-metrics to whitelist all entries (for local debugging)

Not supported on iOS so dev builds will not show chrome://ukm data still.

Bug: 826400
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I5d2b1ddc06256903949940638ed76e5d9231da51
Reviewed-on: https://chromium-review.googlesource.com/985017
Reviewed-by: Steven Holte <holte@chromium.org>
Reviewed-by: Olivier Robin <olivierrobin@chromium.org>
Commit-Queue: Robert Kaplow <rkaplow@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548516}
Former-commit-id: 8b44ca49e25358bfb6a562706c6cf3bbaf56a52e